@@ -1,5 +1,9 @@
 2025-07-30  Zhengyi Fu  <i@fuzy.me>
 
+	* site-lisp/gptel-config.el: Add presets.
+
+2025-07-30  Zhengyi Fu  <i@fuzy.me>
+
 	* init.el (quilt-list-applied-patches): New command.
 
 2025-07-30  Zhengyi Fu  <i@fuzy.me>
